--- a/conference-multipass.html
+++ b/conference-multipass.html
@@ -197,7 +197,7 @@
 									<span class="pass-page__event-list-date">(Oct 7-8<span class="pass-page__note">***</span>)</span>
 								</div>
 								<div class="pass-page__event-list-description-text">
-									Conference on modern Quality Assurance for both software development engineers and QA professional. Learm about latest automation techniques and tips from industry leaders and ship less bugs!<br><br>
+									Conference on modern Quality Assurance for both software development engineers and QA professional. Learn about latest automation techniques and tips from industry leaders and ship less bugs!<br><br>
 									Full-access ticket included with the pass.
 								</div>
 
