update email on pages

--- a/diversity.html
+++ b/diversity.html
@@ -107,7 +107,7 @@
 				<p class="mission__desc">Are you with us? Let’s collaborate! We are looking for partnership opportunities and are open to any brilliant ideas you might have.</p>
 
 				<p class="mission__link">
-					<a href="mailto:hi@gitnation.org">hi@gitnation.org</a>
+					<a href="mailto:hi@gitnation.org">events@gitnation.org</a>
 				</p>
 
 				<!-- <p class="mission__socials-title">Follow us</p>
