add a note to React Summit dates

--- a/conference-multipass.html
+++ b/conference-multipass.html
@@ -154,7 +154,7 @@
 							<div class="pass-page__event-list-description">
 								<div class="pass-page__event-list-description-title">
 									React Summit
-									<span class="pass-page__event-list-date">(Sept 10-11)</span>
+									<span class="pass-page__event-list-date">(Sept 10-11<span class="pass-page__note">***</span>)</span>
 								</div>
 								<div class="pass-page__event-list-description-text">
 									The world biggest and most anticipated React conference, heading to virtual space in 2020 to keep international React fans connected with top speakers and core contributors from React and React Native teams.<br><br>
