update conf dates

--- a/conference-multipass.html
+++ b/conference-multipass.html
@@ -128,11 +128,11 @@
 							<div class="pass-page__event-list-description">
 								<div class="pass-page__event-list-description-title">
 									JSNation Live
-									<span class="pass-page__event-list-date">(Jun 18-19)</span>
+									<s><span class="pass-page__event-list-date">(Jun 18-19)</span></s>
 								</div>
 								<div class="pass-page__event-list-description-text">
 									Remote edition of our cross-framework, all-things JavaScript conference.<br> Meet core library authors, attend a variety of workshops, and learn about the future of JavaScript.<br><br>
-									Full-access ticket included with the pass.
+									The event have passed, get instant access to recordings with the Multipass.
 								</div>
 
 							</div>
@@ -194,7 +194,7 @@
 							<div class="pass-page__event-list-description">
 								<div class="pass-page__event-list-description-title">
 									QA Global Summit
-									<span class="pass-page__event-list-date">(Oct 7-8<span class="pass-page__note">***</span>)</span>
+									<span class="pass-page__event-list-date">(Nov 5-6<span class="pass-page__note">***</span>)</span>
 								</div>
 								<div class="pass-page__event-list-description-text">
 									Conference on modern Quality Assurance for both software development engineers and QA professional. Learn about latest automation techniques and tips from industry leaders and ship less bugs!<br><br>
@@ -218,7 +218,7 @@
 							<div class="pass-page__event-list-description">
 								<div class="pass-page__event-list-description-title">
 									Global GraphQL Summit
-									<span class="pass-page__event-list-date">(Nov 5-6<span class="pass-page__note">***</span>)</span>
+									<span class="pass-page__event-list-date">(Nov-Dec<span class="pass-page__note">***</span>)</span>
 								</div>
 								<div class="pass-page__event-list-description-text">
 									Get ready for the future of data API's and meet those who're shaping the modern GraphQL toolsets and battle-test it at scale. If you're serious about adoptiong GraphQL to future-proof your applications - it's a must attend event in 2020!<br><br>
@@ -242,7 +242,7 @@
 							<div class="pass-page__event-list-description">
 								<div class="pass-page__event-list-description-title">
 									Machine learning & AI Summit
-									<span class="pass-page__event-list-date">(Dec 10-11<span class="pass-page__note">***</span>)</span>
+									<span class="pass-page__event-list-date">(Jan 28-29<span class="pass-page__note">***</span>)</span>
 								</div>
 								<div class="pass-page__event-list-description-text">
 									Full-access ticket included with the pass.
@@ -265,7 +265,7 @@
 							<div class="pass-page__event-list-description">
 								<div class="pass-page__event-list-description-title">
 									Global Node.js Summit
-									<span class="pass-page__event-list-date">(Jan 28-29<span class="pass-page__note">***</span>)</span>
+									<span class="pass-page__event-list-date">(Feb 18-19<span class="pass-page__note">***</span>)</span>
 								</div>
 								<div class="pass-page__event-list-description-text">
 									Node.js have been growing insanely fast over the last 5 years, and since then became THE full-stack language that's being adopted with any greenfield projects and recent tech rewrite. If you're a front-end or back-end (or both!) engineer - you will learn a ton on how to be more productive, secure and deploy more performant applications to your customers.<br><br>
