slight wording update

--- a/conference-multipass.html
+++ b/conference-multipass.html
@@ -132,7 +132,7 @@
 								</div>
 								<div class="pass-page__event-list-description-text">
 									Remote edition of our cross-framework, all-things JavaScript conference.<br> Meet core library authors, attend a variety of workshops, and learn about the future of JavaScript.<br><br>
-									The event have passed, get instant access to recordings with the Multipass.
+									The event has finished, get instant access to recordings with the Multipass.
 								</div>
 
 							</div>
