--- a/conference-multipass.html
+++ b/conference-multipass.html
@@ -154,7 +154,7 @@
 							<div class="pass-page__event-list-description">
 								<div class="pass-page__event-list-description-title">
 									React Summit
-									<span class="pass-page__event-list-date">(Sept 10-11<span class="pass-page__note">***</span>)</span>
+									<span class="pass-page__event-list-date">(Oct 15-16)</span>
 								</div>
 								<div class="pass-page__event-list-description-text">
 									The world biggest and most anticipated React conference, heading to virtual space in 2020 to keep international React fans connected with top speakers and core contributors from React and React Native teams.<br><br>
@@ -179,10 +179,10 @@
 								</div>
 							</div>
 							<div class="pass-page__event-list-price-block pass-page__event-list-regular-price">
-								<s>300&nbsp;€</s><span class="pass-page__note">**</span>
+								<s>250&nbsp;€</s><span class="pass-page__note">**</span>
 							</div>
 							<div class="pass-page__event-list-price-block pass-page__event-list-new-price">
-								200&nbsp;€
+								120&nbsp;€
 							</div>
 						</div>
 					</div>
