add note on absolute discount value for workshops

--- a/conference-multipass.html
+++ b/conference-multipass.html
@@ -291,7 +291,7 @@
 								</div>
 								<div class="pass-page__event-list-description-text">
 									Each conference we host is accompanied by a number of hands-on workshops, usually 2 days by 4 hours, led by top industry trainer, authors of most used OSS libraries and professional speakers.<br><br>
-									With Conference Multipass you've entitled to unlimited 20% discount across all events.
+									With Conference Multipass you've entitled to unlimited 20% discount across all events. Absolute amount of the discount varies on the workshop price, example based on JSNation Live workshop prices.
 								</div>
 
 							</div>
