Comments out JSN

--- a/conference-multipass.html
+++ b/conference-multipass.html
@@ -59,7 +59,7 @@
 	<main class="content pass-page">
 		<section class="page-section">
 			<div class="container pass-page">
-				<h2 class="section-highlight-title">Get access to 6 remote conferences and a number of exclusive perks for <s>580</s> 139&nbsp;€<span class="pass-page__note">*</span>!</h2>
+				<h2 class="section-highlight-title">Get access to 5 remote conferences and a number of exclusive perks for <s>500</s> 139&nbsp;€<span class="pass-page__note">*</span>!</h2>
 
 				<div class="pass-page__description">
 					<div class="pass-page__description-left">
@@ -118,7 +118,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="pass-page__event-list-item">
+					<!--<div class="pass-page__event-list-item">
 						<div class="pass-page__event-list-item-line">
 							<div class="pass-page__event-list-logo">
 								<a href="http://live.jsnation.com/" target="_blank" title="JSNation Live Conference">
@@ -143,7 +143,7 @@
 								free
 							</div>
 						</div>
-					</div>
+					</div>-->
 					<div class="pass-page__event-list-item">
 						<div class="pass-page__event-list-item-line">
 							<div class="pass-page__event-list-logo">
