--- a/conference-multipass.html
+++ b/conference-multipass.html
@@ -189,35 +189,11 @@
 					<div class="pass-page__event-list-item">
 						<div class="pass-page__event-list-item-line">
 							<div class="pass-page__event-list-logo">
-								<img src="pic/qasummit.png" class="pass-page__event-list-logo-img" alt="QA Global Summit" />
-							</div>
-							<div class="pass-page__event-list-description">
-								<div class="pass-page__event-list-description-title">
-									QA Global Summit
-									<span class="pass-page__event-list-date">(Nov 5-6<span class="pass-page__note">***</span>)</span>
-								</div>
-								<div class="pass-page__event-list-description-text">
-									Conference on modern Quality Assurance for both software development engineers and QA professional. Learn about latest automation techniques and tips from industry leaders and ship less bugs!<br><br>
-									Full-access ticket included with the pass.
-								</div>
-
-							</div>
-							<div class="pass-page__event-list-price-block pass-page__event-list-regular-price">
-								<s>100&nbsp;€</s><span class="pass-page__note">**</span>
-							</div>
-							<div class="pass-page__event-list-price-block pass-page__event-list-new-price">
-								free
-							</div>
-						</div>
-					</div>
-					<div class="pass-page__event-list-item">
-						<div class="pass-page__event-list-item-line">
-							<div class="pass-page__event-list-logo">
 								<img src="pic/graphqlsummit.png" class="pass-page__event-list-logo-img" alt="QA Global Summit" />
 							</div>
 							<div class="pass-page__event-list-description">
 								<div class="pass-page__event-list-description-title">
-									Global GraphQL Summit
+									GraphQL Global Summit
 									<span class="pass-page__event-list-date">(Nov-Dec<span class="pass-page__note">***</span>)</span>
 								</div>
 								<div class="pass-page__event-list-description-text">
@@ -241,10 +217,34 @@
 							</div>
 							<div class="pass-page__event-list-description">
 								<div class="pass-page__event-list-description-title">
-									Machine learning & AI Summit
+									MLConf.eu
 									<span class="pass-page__event-list-date">(Jan 28-29<span class="pass-page__note">***</span>)</span>
 								</div>
 								<div class="pass-page__event-list-description-text">
+									Full-access ticket included with the pass.
+								</div>
+
+							</div>
+							<div class="pass-page__event-list-price-block pass-page__event-list-regular-price">
+								<s>100&nbsp;€</s><span class="pass-page__note">**</span>
+							</div>
+							<div class="pass-page__event-list-price-block pass-page__event-list-new-price">
+								free
+							</div>
+						</div>
+					</div>
+					<div class="pass-page__event-list-item">
+						<div class="pass-page__event-list-item-line">
+							<div class="pass-page__event-list-logo">
+								<img src="pic/qasummit.png" class="pass-page__event-list-logo-img" alt="QA Global Summit" />
+							</div>
+							<div class="pass-page__event-list-description">
+								<div class="pass-page__event-list-description-title">
+									The LeadQA Conference
+									<span class="pass-page__event-list-date">(Nov 5-6<span class="pass-page__note">***</span>)</span>
+								</div>
+								<div class="pass-page__event-list-description-text">
+									Conference on modern Quality Assurance`s leadership, processes and management. Get the skill set to boost your career and help others to succeed.<br><br>
 									Full-access ticket included with the pass.
 								</div>
 
@@ -264,7 +264,7 @@
 							</div>
 							<div class="pass-page__event-list-description">
 								<div class="pass-page__event-list-description-title">
-									Global Node.js Summit
+									Global Node Summit
 									<span class="pass-page__event-list-date">(Feb 18-19<span class="pass-page__note">***</span>)</span>
 								</div>
 								<div class="pass-page__event-list-description-text">
