--- a/index.html
+++ b/index.html
@@ -325,6 +325,19 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="js/scripts.js?07062020"></script>
 
+<div style="display: none">
+	<!--LiveInternet counter--><a href="//www.liveinternet.ru/click"
+								  target="_blank"><img id="licntE6EF" width="31" height="31" style="border:0"
+													   title="LiveInternet"
+													   src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAEALAAAAAABAAEAAAIBTAA7"
+													   alt=""/></a><script>(function(d,s){d.getElementById("licntE6EF").src=
+		"//counter.yadro.ru/hit?t38.6;r"+escape(d.referrer)+
+		((typeof(s)=="undefined")?"":";s"+s.width+"*"+s.height+"*"+
+				(s.colorDepth?s.colorDepth:s.pixelDepth))+";u"+escape(d.URL)+
+		";h"+escape(d.title.substring(0,150))+";"+Math.random()})
+(document,screen)</script><!--/LiveInternet-->
+</div>
+
 <script type="text/javascript">
   var _gauges = _gauges || [];
   (function() {
