--- a/conference-multipass.html
+++ b/conference-multipass.html
@@ -159,7 +159,7 @@
 								<div class="pass-page__event-list-description-text">
 									The world biggest and most anticipated React conference, heading to virtual space in 2020 to keep international React fans connected with top speakers and core contributors from React and React Native teams.<br><br>
 
-									Watch-only ticket is included with the pass.
+									Watch-only ticket for both Base Camp and Summit tracks is included with the pass.
 								</div>
 
 							</div>
