update conf dates

--- a/conference-multipass.html
+++ b/conference-multipass.html
@@ -189,15 +189,14 @@
 					<div class="pass-page__event-list-item">
 						<div class="pass-page__event-list-item-line">
 							<div class="pass-page__event-list-logo">
-								<img src="pic/graphqlsummit.png" class="pass-page__event-list-logo-img" alt="QA Global Summit" />
+								<img src="pic/mlconf.png" class="pass-page__event-list-logo-img" alt="ML Conf EU" />
 							</div>
 							<div class="pass-page__event-list-description">
 								<div class="pass-page__event-list-description-title">
-									GraphQL Global Summit
-									<span class="pass-page__event-list-date">(Nov-Dec<span class="pass-page__note">***</span>)</span>
+									MLConf.eu
+									<span class="pass-page__event-list-date">(Nov 5-6)</span>
 								</div>
 								<div class="pass-page__event-list-description-text">
-									Get ready for the future of data API's and meet those who're shaping the modern GraphQL toolsets and battle-test it at scale. If you're serious about adopting GraphQL to future-proof your applications - it's a must attend event in 2020!<br><br>
 									Full-access ticket included with the pass.
 								</div>
 
@@ -213,14 +212,15 @@
 					<div class="pass-page__event-list-item">
 						<div class="pass-page__event-list-item-line">
 							<div class="pass-page__event-list-logo">
-								<img src="pic/mlconf.png" class="pass-page__event-list-logo-img" alt="QA Global Summit" />
+								<img src="pic/graphqlsummit.png" class="pass-page__event-list-logo-img" alt="GraphQL Global Summit" />
 							</div>
 							<div class="pass-page__event-list-description">
 								<div class="pass-page__event-list-description-title">
-									MLConf.eu
-									<span class="pass-page__event-list-date">(Jan 28-29<span class="pass-page__note">***</span>)</span>
+									GraphQL Global Summit
+									<span class="pass-page__event-list-date">(Dec 7-8)</span>
 								</div>
 								<div class="pass-page__event-list-description-text">
+									Get ready for the future of data API's and meet those who're shaping the modern GraphQL toolsets and battle-test it at scale. If you're serious about adopting GraphQL to future-proof your applications - it's a must attend event in 2020!<br><br>
 									Full-access ticket included with the pass.
 								</div>
 
@@ -241,7 +241,7 @@
 							<div class="pass-page__event-list-description">
 								<div class="pass-page__event-list-description-title">
 									The LeadQA Conference
-									<span class="pass-page__event-list-date">(Nov 5-6<span class="pass-page__note">***</span>)</span>
+									<span class="pass-page__event-list-date">(Jan 28-29, 2021<span class="pass-page__note">***</span>)</span>
 								</div>
 								<div class="pass-page__event-list-description-text">
 									Conference on modern Quality Assurance`s leadership, processes and management. Get the skill set to boost your career and help others to succeed.<br><br>
@@ -260,12 +260,12 @@
 					<div class="pass-page__event-list-item">
 						<div class="pass-page__event-list-item-line">
 							<div class="pass-page__event-list-logo">
-								<img src="pic/nodejssummit.png" class="pass-page__event-list-logo-img" alt="QA Global Summit" />
+								<img src="pic/nodejssummit.png" class="pass-page__event-list-logo-img" alt="Global Node Summit" />
 							</div>
 							<div class="pass-page__event-list-description">
 								<div class="pass-page__event-list-description-title">
 									Global Node Summit
-									<span class="pass-page__event-list-date">(Feb 18-19<span class="pass-page__note">***</span>)</span>
+									<span class="pass-page__event-list-date">(Feb 18-19, 2021<span class="pass-page__note">***</span>)</span>
 								</div>
 								<div class="pass-page__event-list-description-text">
 									Node.js have been growing insanely fast over the last 5 years, and since then became THE full-stack language that's being adopted with any greenfield projects and recent tech rewrite. If you're a front-end or back-end (or both!) engineer - you will learn a ton on how to be more productive, secure and deploy more performant applications to your customers.<br><br>
