update diversity and inclusion page

--- a/diversity-and-inclusion.html
+++ b/diversity-and-inclusion.html
@@ -45,9 +45,8 @@
 
 				<nav class="main-nav">
 					<ul class="main-menu">
-						<li class="main-menu__item"><a class="main-menu__link" href="#diversity">Diversity</a></li>
+						<li class="main-menu__item"><a class="main-menu__link" href="#diversity">Diversity & Inclusion</a></li>
 						<li class="main-menu__item"><a class="main-menu__link" href="#accessibility">Accessibility</a></li>
-<!--						<li class="main-menu__item"><a class="main-menu__link" href="#partners">Partners</a></li>-->
 						<li class="main-menu__item"><a class="main-menu__link" href="#contact-us">Contact us</a></li>
 					</ul>
 				</nav>
@@ -61,7 +60,7 @@
 	<main class="content">
 		<section class="page-section" id="diversity">
 			<div class="container">
-				<h2 class="section-title">Diversity</h2>
+				<h2 class="section-title">Diversity & Inclusion</h2>
 
 				<ul class="statement-list">
 					<li class="statement-list__item">Code of Conduct is always available – please see the CoC pages on the website of a specific conference. This policy applies to all participants, partners and staff, and failing to comply with the Code of Conduct can result in being denied access to the conference.</li>
@@ -90,7 +89,7 @@
 					<li class="statement-list__item">We have rooms suitable for breastfeeding, meditation, and praying. A kids corner with a baby sitter won’t be available.</li>
 					<li class="statement-list__item">Parking spots can be booked for attendees with special needs.</li>
 					<li class="statement-list__item">Barrier-free public transport information is provided before the event.</li>
-					<li class="statement-list__item">Dietary requirement-compliant, healthy, nutritious food will be served throughout the day. Our caterer has several options available if you have dietary needs – we always offer vegan and gluten-free options. If you have an allergy, please let us know before the conference at <a href="mailto:hi@gitnation.org">hi@gitnation.org</a>.</li>
+					<li class="statement-list__item">Dietary requirement-compliant, healthy, nutritious food will be served throughout the day. Our caterer has several options available if you have dietary needs – we always offer vegan and gluten-free options. If you have an allergy, please let us know before the conference at <a href="mailto:events@gitnation.org">events@gitnation.org</a>.</li>
 					<li class="statement-list__item">Free wi-fi and power outlets are always provided.</li>
 				</ul>
 
